# Sanctifier

./: .gitignore  .sanctify.toml  ARCHITECTURE.md  Cargo.toml  README.md  SECURITY.md
.github/: CODEOWNERS  labeler.yml
.github/workflows/: ci.yml  labeler.yml  pr-size.yml  soroban-deploy.yml
contracts/amm-pool/: Cargo.toml
contracts/amm-pool/src/: kani_harness.rs  lib.rs
contracts/amm-pool/test_snapshots/tests/: test_contract_initialization.1.json
contracts/protected-vault/: Cargo.toml
contracts/protected-vault/src/: lib.rs
contracts/protected-vault/tests/: integration_test.rs
contracts/reentrancy-guard/: CHANGELOG.md  Cargo.toml  README.md
contracts/reentrancy-guard/src/: lib.rs
contracts/runtime-guard-wrapper/: Cargo.toml  README.md
contracts/runtime-guard-wrapper/src/: lib.rs
contracts/runtime-guard-wrapper/tests/: guard_invariant_integration.rs
contracts/token-invariants/: Cargo.toml
contracts/token-invariants/src/: kani_proofs.rs  lib.rs  pure.rs  pure_tests.rs
docs/: HYGIENE_RULES.md  README.md  awesome-soroban-security.md  cli.md  differential-testing.md  invariant-dsl.md
frontend/: PRODUCTION_HARDENING.md  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/components/: CodeSnippet.tsx  ErrorBoundary.tsx  FindingDetailDrawer.tsx  FindingsList.tsx  FindingsPanel.tsx  FindingsSearch.stories.tsx  FindingsSearch.tsx  FindingsTable.stories.tsx  FindingsTable.tsx  LoadingSkeleton.tsx  SanctityScore.tsx  ScoreTrendChart.stories.tsx  ScoreTrendChart.tsx  SeverityFacets.stories.tsx  SeverityFacets.tsx  SeverityFilter.tsx  SummaryChart.tsx  ThemeToggle.tsx  useFindingsQuery.ts
frontend/app/dashboard/: page.tsx
frontend/app/lib/: findings-query.ts
frontend/app/lib/score-history/: adapter.ts  types.ts  useScoreHistory.ts
frontend/app/terminal/: page.tsx
scripts/: deploy-soroban-testnet.sh  differential-test.sh
tooling/sanctifier-cli/: Cargo.toml
tooling/sanctifier-cli/src/: main.rs  score.rs  zk.rs
tooling/sanctifier-cli/src/commands/: analyze.rs  attest.rs  baseline.rs  diff.rs  mod.rs  prove.rs  verify.rs
tooling/sanctifier-cli/tests/: attest.rs  cli_tests.rs  diff_tests.rs  prove_cli.rs
tooling/sanctifier-core/: Cargo.toml
tooling/sanctifier-core/src/: baseline.rs  finding_codes.rs  invariant.rs  lib.rs  smt.rs
tooling/sanctifier-core/src/rules/: edge_amount.rs  error_code_collision.rs  hardcoded_addr.rs  mod.rs
tooling/sanctifier-core/tests/: README.md  detector_snapshots.rs  differential_test.rs  hygiene_rules_test.rs  invariant_integration_test.rs
tooling/sanctifier-core/tests/fixtures/: hygiene_clean.rs  hygiene_violations.rs
tooling/sanctifier-core/tests/fixtures/corpus/: README.md  differential-corpus.json
tooling/sanctifier-core/tests/fixtures/corpus/solidity/: confused_deputy_fixed.sol  confused_deputy_vulnerable.sol  reentrancy_fixed.sol  reentrancy_vulnerable.sol  unbounded_loop_fixed.sol  unbounded_loop_vulnerable.sol  unprotected_upgrade_fixed.sol  unprotected_upgrade_vulnerable.sol  weak_randomness_fixed.sol  weak_randomness_vulnerable.sol
tooling/sanctifier-core/tests/fixtures/detectors/: arithmetic_overflow.rs  auth_gap.rs  edge_amount.rs  error_code_collision.rs  hardcoded_addr.rs  ledger_size.rs  panic_detection.rs  unhandled_result.rs  unused_variable.rs
tooling/sanctifier-core/tests/snapshots/: detector_snapshots__arithmetic_overflow.snap  detector_snapshots__auth_gap.snap  detector_snapshots__edge_amount.snap  detector_snapshots__error_code_collision.snap  detector_snapshots__hardcoded_addr.snap  detector_snapshots__ledger_size.snap  detector_snapshots__panic_detection.snap  detector_snapshots__unhandled_result.snap  detector_snapshots__unused_variable.snap
tooling/sanctifier-guards/: Cargo.toml  README.md
tooling/sanctifier-guards/src/: lib.rs
tooling/sanctifier-wasm/: Cargo.toml
tooling/sanctifier-wasm/src/: lib.rs
tooling/sanctify-macros/: Cargo.toml
tooling/sanctify-macros/src/: invariant_args.rs  kani_gen.rs  lib.rs
