[workspace]
members = [
    "tooling/sanctifier-core",
    "tooling/sanctify-macros",
    "contracts/vulnerable-contract",
    "contracts/token-with-bugs",
    "contracts/amm-pool",
    "contracts/reentrancy-guard",
    "contracts/protected-vault",
    "contracts/runtime-guard-wrapper",
    "contracts/kani-poc",
    "contracts/token-invariants",
]
resolver = "2"

[workspace.dependencies]
soroban-sdk = { version = "20.5.0" }

[workspace.package]
rust-version = "1.78"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
