[package]
name = "amm-pool"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "amm_pool"

[dependencies]
soroban-sdk = { workspace = true }

[dev-dependencies]
proptest = "1.4"
soroban-sdk = { workspace = true, features = ["testutils"] }

# Kani verification dependencies
[target.'cfg(kani)'.dependencies]

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
