[package]
name = "protected-vault"
version = "0.1.0"
edition = "2021"
description = "Example Soroban vault contract demonstrating reentrancy-guard integration"
license = "MIT"

[lib]
crate-type = ["rlib"]

[dependencies]
soroban-sdk = "20.5.0"
reentrancy-guard = { path = "../reentrancy-guard" }

[dev-dependencies]
soroban-sdk = { version = "20.5.0", features = ["testutils"] }
reentrancy-guard = { path = "../reentrancy-guard", features = ["testutils"] }

[features]
testutils = ["soroban-sdk/testutils", "reentrancy-guard/testutils"]

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true
