[package]
name = "reentrancy-guard"
version = "0.1.0"
edition = "2021"
description = "Formally verified, no_std reentrancy guard for Soroban smart contracts"
license = "MIT"
authors = ["Centurylong Contributors"]
repository = "https://github.com/Centurylong/sanctifier"
homepage = "https://github.com/Centurylong/sanctifier/tree/main/contracts/reentrancy-guard"
documentation = "https://docs.rs/reentrancy-guard"
readme = "README.md"
keywords = ["soroban", "stellar", "reentrancy", "guard", "security"]
categories = ["cryptography::cryptocurrencies", "no-std"]
rust-version = "1.78"

[lib]
crate-type = ["rlib"]

[dependencies]
soroban-sdk = "20.5.0"

[dev-dependencies]
soroban-sdk = { version = "20.5.0", features = ["testutils"] }

[features]
testutils = ["soroban-sdk/testutils"]

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true
