[package]
name = "sanctify-macros"
version = "0.1.0"
edition = "2021"
description = "Proc-macro crate for sanctify::invariant attribute (Sanctifier invariant DSL)"
license = "MIT"
publish = false

[lib]
proc-macro = true

[dependencies]
syn       = { version = "2.0", features = ["full", "extra-traits"] }
quote     = "1.0"
proc-macro2 = "1.0"
